# tmp

./: 1.md
employee_recruiter_agent/: .env.example  .gitignore  README.md  SAMPLE_RUN.md  __init__.py  employee_recruiter_agent.py  pyproject.toml  streamlit_app.py
employee_recruiter_agent/documentation/: display-info.json
employee_recruiter_agent/employee_recruiter_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
employee_recruiter_agent/sample_input/: README.md  generate_resumes.py
