[project]
name = "employee-recruiter-agent"
version = "0.1.0"
description = "An automated AI recruitment system that screens candidates, schedules interviews, and sends professional email communications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.6",
    "openrouter>=0.1.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0",
    "openai>=2.7.2",
]

